--- a/public/index.html
+++ b/public/index.html
@@ -22,8 +22,8 @@
     <main>
         <section class="hero">
             <div class="hero-content">
-                <h2 class="hero-title">捕捉瞬间之美</h2>
-                <p class="hero-subtitle">用镜头记录世界的精彩时刻</p>
+                <h2 class="hero-title">@G061206</h2>
+                <p class="hero-subtitle"></p>
             </div>
         </section>
 
@@ -40,7 +40,7 @@
             <div class="container">
                 <h2 class="section-title">关于我</h2>
                 <div class="about-content">
-                    <p>一名热爱摄影的创作者，专注于捕捉生活中的美好瞬间。通过镜头，我希望与大家分享这个世界的精彩与感动。</p>
+                    <p>主攻风光摄影，偶尔拍拍人像</p>
                 </div>
             </div>
         </section>
@@ -49,8 +49,8 @@
             <div class="container">
                 <h2 class="section-title">联系方式</h2>
                 <div class="contact-content">
-                    <p>Email: photographer@example.com</p>
-                    <p>微信: photographer123</p>
+                    <p>Email: g061206@outlook.com</p>
+                    <p>微信:GAN061206</p>
                 </div>
             </div>
         </section>
@@ -58,7 +58,7 @@
 
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2024 摄影作品集. All rights reserved.</p>
+            <p>&copy; 2025 摄影作品集. All rights reserved.</p>
         </div>
     </footer>
 
